[gd_scene load_steps=2 format=2]

[ext_resource path="res://Tela_Inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 301.0
margin_top = 357.0
margin_right = 719.0
margin_bottom = 445.0
text = "MOSTRAR LISTA"

[node name="DADO3" type="LineEdit" parent="."]
margin_left = 697.0
margin_top = 216.0
margin_right = 805.0
margin_bottom = 249.0

[node name="DADO2" type="LineEdit" parent="."]
margin_left = 451.0
margin_top = 212.0
margin_right = 573.0
margin_bottom = 251.0

[node name="DADO1" type="LineEdit" parent="."]
margin_left = 218.0
margin_top = 213.0
margin_right = 347.0
margin_bottom = 250.0

[node name="Label" type="Label" parent="."]
margin_left = 220.0
margin_top = 166.0
margin_right = 346.0
margin_bottom = 214.0
text = "PRIMEIRO NÚMERO"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 447.0
margin_top = 167.0
margin_right = 574.0
margin_bottom = 215.0
text = "SEGUNDO NÚMERO"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 699.0
margin_top = 172.0
margin_right = 810.0
margin_bottom = 220.0
text = "TERCEIRO NÚMERO"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 298.0
margin_top = 271.0
margin_right = 719.0
margin_bottom = 351.0

[node name="TextEdit" type="TextEdit" parent="ColorRect"]
margin_left = 2.0
margin_top = 3.0
margin_right = 418.0
margin_bottom = 77.0

[node name="Button_Numero_Pronto" type="Button" parent="."]
margin_left = 756.0
margin_top = 269.0
margin_right = 919.0
margin_bottom = 347.0
text = "PRINTAR LISTA PRONTA"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button_Numero_Pronto" to="." method="_on_Button_Numero_Pronto_pressed"]
